tooling/nargo_cli/tests/snapshots/execution_success/regression_9467/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
global G_A: [u32] = &[];

fn main(b: bool) -> pub u32 {
    if b {
        G_A.pop_back().1
    } else {
        1_u32
    }
}
