tooling/nargo_cli/tests/snapshots/execution_success/regression_9467/execute__tests__force_brillig_false_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "b",
        "type": {
          "kind": "boolean"
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "integer",
        "sign": "unsigned",
        "width": 32
      },
      "visibility": "public"
    },
    "error_types": {
      "14225679739041873922": {
        "error_kind": "string",
        "string": "Index out of bounds"
      }
    }
  },
  "bytecode": [
    "func 0",
    "current witness index : _1",
    "private parameters indices : [_0]",
    "public parameters indices : []",
    "return value indices : [_1]",
    "EXPR [ (-1, _0) 0 ]",
    "EXPR [ (1, _1) -1 ]"
  ],
  "debug_symbols": "dY/dCoMwDIXfJde9cLA/fJUxpNY4AiEtsR0M8d0XRTd3sas0Of1OckbosC2PhqSPA9S3EVolZno0HIPPFMWm4+Rga5usiDaCnW5U8oqSoZbC7ODpuSyfhuRlqdmrqZUDlM6qGfbEOL8m96Wr/+jluLLX8wc+GX23zgfSn3uhgvowzWZKvmVcM/RFwi5SfqVN2UInjQG7ojjbLZoteAM=",
  "file_map": {
    "50": {
      "source": "global G_A: [u32] = &[];\nfn main(b: bool) -> pub u32 {\n    if b {\n        G_A.pop_back().1\n    } else {\n        1\n    }\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": []
}
