tooling/nargo_cli/tests/snapshots/execution_success/regression_9467/execute__tests__force_brillig_false_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "b",
        "type": {
          "kind": "boolean"
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "tuple",
        "fields": [
          {
            "kind": "integer",
            "sign": "unsigned",
            "width": 32
          },
          {
            "kind": "integer",
            "sign": "unsigned",
            "width": 32
          }
        ]
      },
      "visibility": "public"
    },
    "error_types": {
      "16431471497789672479": {
        "error_kind": "string",
        "string": "Index out of bounds"
      }
    }
  },
  "bytecode": [
    "func 0",
    "current witness index : _5",
    "private parameters indices : [_0]",
    "public parameters indices : []",
    "return value indices : [_1, _2]",
    "EXPR [ (-1, _0) 0 ]",
    "EXPR [ (10, _0) (-1, _3) 0 ]",
    "INIT (id: 0, len: 1, witnesses: [_3])",
    "EXPR [ (-1, _4) 0 ]",
    "MEM (id: 0, read at: EXPR [ (1, _4) 0 ], value: EXPR [ (1, _5) 0 ]) ",
    "EXPR [ (1, _0) (1, _1) -1 ]",
    "EXPR [ (2, _0) (1, _2) -2 ]"
  ],
  "debug_symbols": "[debug_symbols]",
  "file_map": "[file_map]",
  "expression_width": {
    "Bounded": {
      "width": 4
    }
  }
}
