tooling/nargo_cli/tests/snapshots/execution_success/regression_9467/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: u1):
    (no terminator instruction)
}
[regression_9467] Circuit output: (1, 2)
